# mycodecopy

./: README.md
CHAPT1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello.cpp  learn_cmake
CHAPT2/: CMakeLists.txt.back  Makefile  ros2_cpp_node  ros2_cpp_node.cpp  ros2_python_node.py  test_args.cpp
CHAPT2/chapt2_ws/install/: local_setup.sh  setup.sh
CHAPT2/chapt2_ws/log/: latest_build
CHAPT2/chapt2_ws/src/demo_cpp_pkg/: CMakeLists.txt
CHAPT2/chapt2_ws/src/demo_cpp_pkg/src/: cpp_node.cpp  learn_func.cpp  learn_lambda.cpp  learn_shared_ptr.cpp  learn_thread.cpp  person_node.cpp
CHAPT2/chapt2_ws/src/demo_python_pkg/: setup.py
CHAPT3/topic_ws/: novel1.txt
CHAPT3/topic_ws/install/: local_setup.sh  setup.sh
CHAPT3/topic_ws/log/: latest_build
CHAPT3/topic_ws/src/demo_cpp_topic/: CMakeLists.txt
CHAPT3/topic_ws/src/demo_cpp_topic/src/: turtle_circle.cpp  turtle_contrl.cpp
CHAPT3/topic_ws/src/demo_python_topic/: setup.py
CHAPT4/CHAPT4_WS/install/: local_setup.sh  setup.sh
CHAPT4/CHAPT4_WS/log/: latest_build
CHAPT4/CHAPT4_WS/src/chapt4_interfaces/: CMakeLists.txt  package.xml
CHAPT4/CHAPT4_WS/src/demo_cpp_service/: CMakeLists.txt
CHAPT4/CHAPT4_WS/src/demo_cpp_service/src/: partol_client.cpp  turtle_contorl.cpp
CHAPT4/CHAPT4_WS/src/demo_python_service/: package.xml  setup.py
CHAPT4/CHAPT4_WS/src/demo_python_service/demo_python_service/: face_detect_client_node.py
CHAPT6/chapt6_ws/install/: local_setup.sh  setup.sh
CHAPT6/chapt6_ws/log/: latest_build
CHAPT6/chapt6_ws/src/fishbot_description/config/: display_robot_model.rviz
CHAPT7/chapt7_ws/install/: local_setup.sh  setup.sh
CHAPT7/chapt7_ws/log/: latest_build
CHAPT7/chapt7_ws/src/fishbot_application/: package.xml  setup.cfg  setup.py
CHAPT7/chapt7_ws/src/fishbot_description/: CMakeLists.txt
CHAPT7/chapt7_ws/src/fishbot_description/launch/: display_robot.launch.py
CHAPT7/chapt7_ws/src/fishbot_description/urdf/: first_robot.urdf  first_robot.xacro
CHAPT7/chapt7_ws/src/fishbot_navigation2/: CMakeLists.txt
CHAPT7/chapt7_ws/src/fishbot_navigation2/config/: nav2_params.yaml
CHAPT7/chapt7_ws/src/fishbot_navigation2/maps/: room.yaml
(+70 files in other folders)
